apps/staging/podinfo/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: podinfo
    labels:
        app: podinfo
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/service-upstream: "true"
        nginx.ingress.kubernetes.io/configuration-snippet: "proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:9898;\nproxy_hide_header l5d-remote-ip;\nproxy_hide_header l5d-server-id;    \n"
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:S+d+sqcLcF8sP5VDjQ3LmfcOVIemsc0=,iv:TBk+5UEc3XgbOYHDWxCu0rO84qjlFwtoYvthyhJVVAk=,tag:/fselOblZj63cRD/1zY1cA==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: podinfo
                        port:
                            number: 9898
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:pRdHqxXk4kRpjQCVBLdVBGmfbYMHO0w=,iv:gNcfpO7JRZyhFRNjejALQriQB779dVRCqNdUoFdsupA=,tag:y1rALs5JFZtzFDEDOGIGXA==,type:str]
          secretName: podinfo-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-06T13:34:07Z"
    mac: ENC[AES256_GCM,data:V5a8phBYbMj08rpk10Wr818eL5nndfNusAG3cobUBV3pDDZtORSxFO0ZcMR6QDS5jqJM2pT7axVVk925qk3T1WjyjKZ5JOh0legkrSuwefppK32DF4m4QcCm9KGyWdLYdI5tcALEo3DTrwH4iZmXFeMX+Fjvj8u0fZtbSYestx4=,iv:mTCejOs09ek6nNCkf4sldxa5sAyny+HSXviX3/TgZio=,tag:aEhhuRgoIeHIt3+4XduW3g==,type:str]
    pgp:
        - created_at: "2022-12-06T13:34:05Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMARAAocYcj62A6Y7WXFQKMBM7TmP+/jtnA7iexEFEFh7OvEx0
[...]
            =8rWB
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(host|hosts)$
    version: 3.7.3
